--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Assingments Galaxy</title>
+    <link rel="stylesheet" href="css/styles.css">    
 </head>
 <body>
-
-<h1>Patrick is Handsome</h1>
-<p>pero atik ra</p>
-
+    <div class="top-bar">Assignments Galaxy</div>
+    <div class="title-container">
+        <h1 class="sw-title">CS 1130 Assignments</h1>
+    </div>
+    <div class="assignments-menu">
+        <a href="conversion.html" class="menu-button">Assignment #1 - Conversion</a>
+        <a href="incometax.html" class="menu-button">Assignment #2 - Income Tax Calculator</a>
+        <a href="fsa.html" class="menu-button">Assignment #3 - Factorial, Sum, and Average</a>
+        <a href="payroll.html" class="menu-button">Assignment #4 - Simple Payroll</a>
+    </div>
+    <div class="footer">Created by Julian Paolo B. Trinidad © 2024</div>
 </body>
 </html>
