--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="top-bar">Assignments Galaxy</div>
     <div class="title-container">
-        <h1 class="sw-title">CS 1130 Assignments</h1>
+        <h1 class="sw-title">Intro To Computing</h1>
     </div>
     <div class="assignments-menu">
         <a href="conversion.html" class="menu-button">Assignment #1 - Conversion</a>
